fix input on mobile

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -11,6 +11,7 @@
     position: absolute;
     left: -23rem;
     opacity: 10%;
+    z-index: 1;
 }
 
 .info{
@@ -29,7 +30,7 @@ input{
     background: transparent;
     font-size: 1.15rem;
     padding: 1rem;
-    z-index: 10;
+    z-index: 2;
 }
 
 button{
